# Agents-Powered-Newsletter

./: .env.example  .gitignore  Dockerfile  README.md  d.py  pyproject.toml  requirements.txt
src/: setup.py
src/gui/: __init__.py  app.py
src/newsletter_gen/: crew.py  main.py
src/newsletter_gen/config/: agents.yaml
src/newsletter_gen/tools/: custom_tool.py
