[project]
name = "newsletter_gen"
version = "0.1.0"
description = "newsletter-gen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
newsletter_gen = "newsletter_gen.main:run"
run_crew = "newsletter_gen.main:run"
train = "newsletter_gen.main:train"
replay = "newsletter_gen.main:replay"
test = "newsletter_gen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
